spotbugs and forbidden apis fixes raw container -> use generics
git-svn-id: https://svn.apache.org/repos/asf/xmlbeans/trunk@1882074 13f79535-47bb-0310-9956-ffa450edef68